--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Thames - Software Engineer Personal Portfolio HTML template</title>
+    <title>Ahmet Gllava - Cloud Consultant</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
@@ -172,7 +172,7 @@
                                     <h1 class="mb-15 white-text">
                                         <span class="sub-heading d-block text-uppercase theme-color mb-0">Hello
                                             I’m</span>
-                                        James Smith
+                                        Ahmet Gllava
                                     </h1>
                                     <h2 class="text-capitalize white-text mb-40">
                                         A Passionate
