--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 </div><!-- /container -->
 
                 <div class="about-text-style position-absolute d-none d-md-inline-block">
-                    <span class="d-inline-block section-text-color">Smith</span>
+                    <span class="d-inline-block section-text-color">Gllava</span>
                 </div><!-- /intro-feature-text -->
                 <div class="about-icon position-absolute d-none d-md-inline-block z-index1 zoom-animation">
                     <img src="images/shape/content-shape2.png" alt="about shape 2">
