--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 									<p class="mb-25">I'm an IT professional with over 13 years of experience in technology, especially cloud solutions. My passion lies in making tech easy, safe, and efficient for everyone.
 									</br></br><b>What I Do Best:</b></br></br>
 									I specialize in enhancing team productivity with tools like Microsoft 365 and Google Workspace. Ensuring security is a priority for me, and I achieve this through Microsoft certified Identity and Access Management. Additionally, I have over five years of experience in building and leading IT teams to tackle challenges effectively.</p>
-                                <div class="about-info-wrapper pt-25 pb-20 mt-25">
+                               <!-- <div class="about-info-wrapper pt-25 pb-20 mt-25">
                                     <div class="row">
                                         <div class="col-xl-6  col-lg-12  col-md-6  col-sm-12 col-12">
                                             <ul class="about-info">
@@ -323,26 +323,26 @@
                                                     <p class="jostMedium-font-family mb-6">Name</p>
                                                     <p class="jostMedium-font-family mb-6">Occupation</p>
                                                 </li><!-- /li -->
-                                                <li class="d-inline-block">
+                                   <!--             <li class="d-inline-block">
                                                     <p class="mb-6">Ahmet Gllava</p>
                                                     <p class="mb-6">Cloud Consultant</p>
                                                 </li><!-- /li -->
-                                            </ul>
+                                  <!--          </ul>
                                         </div><!-- /col -->
-                                        <div class="col-xl-6  col-lg-12  col-md-6  col-sm-12 col-12">
+                                  <!--      <div class="col-xl-6  col-lg-12  col-md-6  col-sm-12 col-12">
                                             <ul class="about-info">
                                                 <li class="d-inline-block pr-50">
                                                     <p class="jostMedium-font-family mb-6">Phone</p>
                                                     <p class="jostMedium-font-family mb-6">Email</p>
                                                     <p class="jostMedium-font-family mb-6">Location</p>
                                                 </li><!-- /li -->
-                                                <li class="d-inline-block">
+                                  <!--              <li class="d-inline-block">
                                                     <p class="mb-6">+491707370508</p>
                                                     <p class="mb-6">ahmetgllava@live.com</p>
                                                     <p class="mb-6">Berlin, Germany</p>
                                                 </li><!-- /li -->
-                                            </ul>
-                                        </div><!-- /col -->
+                                   <!--         </ul>
+                                   <!--     </div><!-- /col -->
                                     </div><!-- /row -->
                                 </div><!-- /about-info-wrapper -->
                                 <div class="about-footer-content d-sm-flex align-items-center mt-lg-2 mt-sm-4 mt-3">
