--- a/index.html
+++ b/index.html
@@ -1172,9 +1172,8 @@
                                     </div><!-- /col -->
                                     <div class="col-xl-9  col-lg-9  col-md-12  col-sm-12 col-12">
                                         <div class="service-text d-inline-block ml-xl-2">
-                                            <h3 class="mb-15">Web Development</h3>
-                                            <p class="mb-0">Ludantium totam rem aperia meaququae ab tatis et quasi
-                                                architecto beatae vit dunt ut labore et dolore magna aliqua.</p>
+                                            <h3 class="mb-15">Mobile Device Management</h3>
+                                            <p class="mb-0">Whether it's managing smartphones, tablets, or other mobile devices, I have you covered. With expertise in mobile device management, I ensure all devices are securely configured, monitored, and maintained. My goal is to provide a seamless and efficient management process tailored to your needs.</p>
                                         </div>
                                     </div><!-- /col -->
                                 </div>
@@ -1200,9 +1199,8 @@
                                     </div><!-- /col -->
                                     <div class="col-xl-9  col-lg-9  col-md-12  col-sm-12 col-12">
                                         <div class="service-text d-inline-block ml-xl-2">
-                                            <h3 class="mb-15">Software Development</h3>
-                                            <p class="mb-0">Ludantium totam rem aperia meaququae ab tatis et quasi
-                                                architecto beatae vit dunt ut labore et dolore magna aliqua.</p>
+                                            <h3 class="mb-15">Automated cloud</h3>
+                                            <p class="mb-0">Connecting the dots and ensuring cloud tools seamlessly exchange information, I ensure they are optimally configured and secure. With expertise in cloud automation, I provide a streamlined and efficient process tailored to your needs..</p>
                                         </div>
                                     </div><!-- /col -->
                                 </div>
@@ -1228,9 +1226,8 @@
                                     </div><!-- /col -->
                                     <div class="col-xl-9  col-lg-9  col-md-12  col-sm-12 col-12">
                                         <div class="service-text d-inline-block ml-xl-2">
-                                            <h3 class="mb-15">System Development</h3>
-                                            <p class="mb-0">Ludantium totam rem aperia meaququae ab tatis et quasi
-                                                architecto beatae vit dunt ut labore et dolore magna aliqua.</p>
+                                            <h3 class="mb-15">Cloud Migrations</h3>
+                                            <p class="mb-0">Whether it's a migration from on-premises to Microsoft 365 or Google Workspace, or a cloud-to-cloud transition, I have you covered. With expertise in seamless data transfer and integration, I ensure a smooth and efficient migration process tailored to your needs.</p>
                                         </div>
                                     </div><!-- /col -->
                                 </div>
@@ -1420,7 +1417,7 @@
                         <div class="col-xl-4  col-lg-5  col-md-8  col-sm-7 col-12">
                             <div class="footer-widget footer-logo pb-40">
                                 <div class="copyright-text">
-                                    <p class="mb-0">All rights reserved Ahmet Gllava © 2024
+                                    <p class="mb-0">Copyright © 2024 Ahmet Gllava - All Rights Reserved.
                                     </p>
                                 </div>
                             </div>
