--- a/index.html
+++ b/index.html
@@ -1253,9 +1253,8 @@
                                     </div><!-- /col -->
                                     <div class="col-xl-9  col-lg-9  col-md-12  col-sm-12 col-12">
                                         <div class="service-text d-inline-block ml-xl-2">
-                                            <h3 class="mb-15">Security Analysis</h3>
-                                            <p class="mb-0">Ludantium totam rem aperia meaququae ab tatis et quasi
-                                                architecto beatae vit dunt ut labore et dolore magna aliqua.</p>
+                                            <h3 class="mb-15">Tech shadowing</h3>
+                                            <p class="mb-0">Through tech shadowing, we conduct a thorough analysis of your entire IT infrastructure together to ensure best practices are followed and optimal results are achieved from your SaaS stack.</p>
                                         </div>
                                     </div><!-- /col -->
                                 </div>
