--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                     <h1 class="mb-15 white-text">
                                         <span class="sub-heading d-block text-uppercase theme-color mb-0">Hello
                                             I’m</span>
-                                        Ahmet
+                                        Ahmett
                                     </h1>
                                     <h2 class="text-capitalize white-text mb-40">
                                         an expert in 
